# astromiedust

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: api.md  getting_started.md  index.md  materials.md  outputs.md  particles.md  stars.md  workflow.md
docs/examples/: fomalhaut.md
docs/physics/: effective_medium.md  index.md  optical_coefficients.md  temperatures_beta.md
examples/Fomalhaut/: fomalhaut_demo.py
src/astrodust_optprops/: __init__.py  io.py  material.py  optics_core.py  particles.py  star.py  utils.py
src/astromiedust/: __init__.py  io.py  material.py  optics_core.py  particles.py  star.py  utils.py
tests/: astromiedust_test_blackbody.sav  astromiedust_test_vega.sav  test_io.py  test_material_validation.py  test_precomputed_wavelength_grid.py  test_results_consistency.py  test_scattering_regimes.py  test_star_spectrum.py
