[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astrodust_optprops"
version = "0.9.1"
description = "A tool to compute the optical properties of circumstellar dust particles as well as their resulting equilibrium temperatures and thermal emission."
authors = [
    { name = "Max Sommer", email = "ms3078@cam.ac.uk" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "numba",
    "astropy",
    "matplotlib",
    "tqdm",
    "h5py"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
astrodust_optprops = ["material_data/*"]