[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astromiedust"
version = "0.10.0"
description = "A tool to compute optical properties, temperatures, and thermal emission for circumstellar dust."
authors = [
    { name = "Max Sommer", email = "ms3078@cam.ac.uk" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "numba",
    "astropy",
    "matplotlib",
    "tqdm",
    "h5py"
]

[project.optional-dependencies]
docs = [
    "mkdocs-material<9.7",
    "mkdocstrings[python]",
    "mkdocs-autorefs",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
astromiedust = ["material_data/*"]
